<resources>
    <string name="app_name">TwitterClone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_text">New here? sign Up</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">WIU6J2w7auPHQKa404VrifUcwkP89FrJtmSHKsja</string>
    <string name="back4app_client_key">RU7XBiNqk59mTl0X5xgyGR2s6gl97k6UlXQLlsKA</string>

    <string name="menu_users">Users</string>
    <string name="btn_follow">Follow</string>
    <string name="menu_following">Following</string>
    <string name="menu_followers">Followers</string>
    <string name="menu_tweetFeed">Tweet Feed</string>
    <string name="menu_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btn_tweet">Tweet</string>
    <string name="hint_tweet">Enter your Tweet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_replies">0</string>
    <string name="txt_like">0</string>
    <string name="reply_text">Replying to</string>

</resources>