<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemProfile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/itemUsers"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/itemFollowing"
            android:title="@string/menu_following"/>
        <item
            android:id="@+id/itemFollowers"
            android:title="@string/menu_followers"/>
        <item
            android:id="@+id/itemTweetFeed"
            android:title="@string/menu_tweetFeed"/>
    </group>

</menu>